NetBSD Problem Report #55073

From tsutsui@ceres.dti.ne.jp  Sun Mar 15 04:12:36 2020
Return-Path: <tsutsui@ceres.dti.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id A64DE1A9213
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 15 Mar 2020 04:12:36 +0000 (UTC)
Message-Id: <202003150412.02F4CQHY009624@ceres.dti.ne.jp>
Date: Sun, 15 Mar 2020 13:12:26 +0900 (JST)
From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
Reply-To: tsutsui@ceres.dti.ne.jp
To: gnats-bugs@NetBSD.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: module warning about compat_netbse32_50 during boot
X-Send-Pr-Version: 3.95

>Number:         55073
>Category:       kern
>Synopsis:       module warning about compat_netbse32_50 during boot
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    pgoyette
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Mar 15 04:15:00 +0000 2020
>Closed-Date:    Sun Mar 15 16:27:57 +0000 2020
>Last-Modified:  Sun Mar 15 16:27:57 +0000 2020
>Originator:     Izumi Tsutsui
>Release:        NetBSD 9.99.49 around 20200314
>Organization:
>Environment:
System: NetBSD 9.99.49 (GENERIC) #0: Sun Mar 15 08:00:26 JST 2020
        tsutsui@mirage:/s/cvs/src/sys/arch/zaurus/compile/obj.zaurus/GENERIC
Architecture: earmv5
Machine: zaurus
>Description:
NetBSD/zaurus 9.99.49 GENERIC emits the following warnings during boot:
---
WARNING: module error: built-in module compat_netbsd32_50 can't find builtin dependency `compat_50_quota'
WARNING: module error: built-in module compat_netbsd32_50 prerequisite compat_50_quota failed, error 2
WARNING: module error: built-in module compat_netbsd32_40 prerequisite compat_netbsd32_50 failed, error 2
WARNING: module error: built-in module compat_netbsd32_30 prerequisite compat_netbsd32_40 failed, error 2
WARNING: module error: built-in module compat_netbsd32_20 prerequisite compat_netbsd32_30 failed, error 2
WARNING: module error: built-in module compat_netbsd32_16 prerequisite compat_netbsd32_20 failed, error 2
WARNING: module error: built-in module compat_netbsd32_13 prerequisite compat_netbsd32_16 failed, error 2
WARNING: module error: built-in module compat_netbsd32_50 can't find builtin dependency `compat_50_quota'
WARNING: module error: built-in module compat_netbsd32_50 prerequisite compat_50_quota failed, error 2
WARNING: module error: built-in module compat_netbsd32_40 prerequisite compat_netbsd32_50 failed, error 2
WARNING: module error: built-in module compat_netbsd32_30 prerequisite compat_netbsd32_40 failed, error 2
WARNING: module error: built-in module compat_netbsd32_20 prerequisite compat_netbsd32_30 failed, error 2
WARNING: module error: built-in module compat_netbsd32_16 prerequisite compat_netbsd32_20 failed, error 2
WARNING: module error: built-in module compat_netbsd32_50 can't find builtin dependency `compat_50_quota'
WARNING: module error: built-in module compat_netbsd32_50 prerequisite compat_50_quota failed, error 2
WARNING: module error: built-in module compat_netbsd32_40 prerequisite compat_netbsd32_50 failed, error 2
WARNING: module error: built-in module compat_netbsd32_30 prerequisite compat_netbsd32_40 failed, error 2
WARNING: module error: built-in module compat_netbsd32_20 prerequisite compat_netbsd32_30 failed, error 2
WARNING: module error: built-in module compat_netbsd32_50 can't find builtin dependency `compat_50_quota'
WARNING: module error: built-in module compat_netbsd32_50 prerequisite compat_50_quota failed, error 2
WARNING: module error: built-in module compat_netbsd32_40 prerequisite compat_netbsd32_50 failed, error 2
WARNING: module error: built-in module compat_netbsd32_30 prerequisite compat_netbsd32_40 failed, error 2
WARNING: module error: built-in module compat_netbsd32_50 can't find builtin dependency `compat_50_quota'
WARNING: module error: built-in module compat_netbsd32_50 prerequisite compat_50_quota failed, error 2
WARNING: module error: built-in module compat_netbsd32_40 prerequisite compat_netbsd32_50 failed, error 2
---

Full dmesg is here:
 NetBSD 9.99.49 (GENERIC) #0: Sun Mar 15 08:00:26 JST 2020
        tsutsui@mirage:/s/cvs/src/sys/arch/zaurus/compile/obj.zaurus/GENERIC

>How-To-Repeat:
Boot NetBSD/zaurus GENERIC or C700 kernel.

>Fix:
Some dependencies are missing?

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->pgoyette
Responsible-Changed-By: pgoyette@NetBSD.org
Responsible-Changed-When: Sun, 15 Mar 2020 12:29:57 +0000
Responsible-Changed-Why:
take - most likely my fault


From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
To: gnats-bugs@netbsd.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: Re: kern/55073: module warning about compat_netbse32_50 during boot
Date: Sun, 15 Mar 2020 21:38:07 +0900

 > Full dmesg is here:
 (pasto botch)

  https://dmesgd.nycbug.org/index.cgi?do=view&id=5429

 ---
 Izumi Tsutsui

From: "Paul Goyette" <pgoyette@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55073 CVS commit: src/sys/compat/netbsd32
Date: Sun, 15 Mar 2020 12:46:03 +0000

 Module Name:	src
 Committed By:	pgoyette
 Date:		Sun Mar 15 12:46:02 UTC 2020

 Modified Files:
 	src/sys/compat/netbsd32: netbsd32_compat_50.c

 Log Message:
 Now that we have split the quota code out of the compat_netbsd32_50
 module, it no longer depends on compat_50_quota.

 Should address PR kern/55073


 To generate a diff of this commit:
 cvs rdiff -u -r1.47 -r1.48 src/sys/compat/netbsd32/netbsd32_compat_50.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sun, 15 Mar 2020 16:27:57 +0000
State-Changed-Why:
Confirmed fixed. Thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.