Now that we have split the quota code out of the compat_netbsd32_50 module, it no longer depends on compat_50_quota.

Should address PR kern/55073